# windows-eventlog-transform

./: .gitignore  Cargo.toml  README.md
assets/: cef_mapping.csv  event_mappings.csv  events.csv  tasks.csv
data/: winevt1.xml  winevt2.xml  winevt3.xml  winevt4.xml  winevt5.xml  winevt6.xml  winevt7.xml  winevt8.xml  winevt9.xml
examples/: eg1.rs  eg2.rs  eg3.rs  eg4.rs  eg5.rs  eg6.rs  eg7.rs  eg8.rs  eg9.rs
src/: de.rs  lib.rs
src/cef/: cef_map.rs  macros.rs  mod.rs  parse.rs  parser.rs  properties.rs  utils.rs
src/cef/mappers/: cef_map.rs  event_name.rs  levels.rs  mod.rs  tasks.rs
src/mappers/: cef_map.rs  event_name.rs  levels.rs  mod.rs  opcode.rs  tasks.rs
src/mappings/: events.rs  keywords.rs  levels.rs  mod.rs  tasks.rs
